eslit no-unused-vars off

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,8 @@
     "vitest-globals/env": true
   },
   "rules": {
-    "no-useless-constructor": "off"
+    "no-useless-constructor": "off",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "off"
   }
 }
