--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
   },
   "rules": {
     "no-useless-constructor": "off",
+    "no-new": "off",
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-explicit-any": "off"
